- removed faker instance -> not supported in native image